# tastytrade-cli

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  basic.csv  dash-app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/workflows/: python-app.yml  python-publish-test.yml
config/: twcli.yml.example
docs/: conf.py  future.rst  index.rst
etc/: ttcli.cfg  twcli.cfg
src/: app.py  controller.py  main.py  utils.py
src/crypto/: controller.py
src/future/: commands.py  controller.py
src/option/: commands.py  controller.py
src/order/: README.md  controller.py
src/pairs/: commands.py  sizing.py
src/plot/: base.py  commands.py  controller.py  csv.py  plot.py
src/portfolio/: controller.py
src/quant/: controller.py  helpers.py  models.py
src/stock/: README.md  controller.py
src/watchlist/: controller.py
tastyworks-cli/: __init__.py  tw.py
tests/: test_pairs.py  test_plot.py  test_quant.py  test_twcli.py
tests/data/: transactions.csv  transactions.json
ttcli/: __init__.py  app.py  option.py  order.py  plot.py  portfolio.py  stock.py  trade.py  utils.py  watchlist.py
ttcli/data/: ttcli.cfg
ttcli/modules/: calc.py
twcli/: app.py  main.py  utils.py
twcli/controllers/: base.py  options.py
twcli/core/: exc.py  version.py
twcli/core/crypto/: README.md
twcli/core/future/: README.md
twcli/core/option/: README.md
twcli/core/plot/: README.md
twcli/core/portfolio/: README.md
twcli/core/quant/: README.md
twcli/core/watchlist/: README.md
twcli/option/: commands.py  option.py
twcli/plot/: commands.py  plot.py
twcli/quant/: models.py
