[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ttcli/__init__.py"

[project]
name = "tastytrade-cli"
description = "An easy-to-use command line interface for Tastytrade!"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Graeme Holliday", email = "graeme@tastyware.dev"},
]
dependencies = [
    "anyio>=4.6.3",
    "py-gnuplot>=1.3",
    "rich>=13.8.1",
    "tastytrade>=11.0.1",
    "typer>=0.15.3",
    "yaspin>=3.1.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tastyware/tastytrade-cli"
Funding = "https://github.com/sponsors/tastyware"
Source = "https://github.com/tastyware/tastytrade-cli"
Changelog = "https://github.com/tastyware/tastytrade-cli/releases"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "ruff>=0.6.7",
]

[tool.ruff.lint]
ignore = [
    "E731",  # lambda-assignment
]

[project.scripts]
tt = "ttcli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["ttcli"]
